--- a/templates/blog/footer.html
+++ b/templates/blog/footer.html
@@ -7,7 +7,9 @@ Footer START -->
 		<!-- About and Newsletter START -->
 		<div class="row pt-3 pb-4">
 			<div class="col-md-3">
+				<a href="{% url 'home' %}">
 				<img src="{% static  'images/logo-footer.svg' %}" alt="footer logo">
+				</a>
 			</div>
 			<div class="col-md-5">
 				<p class="text-muted">The next-generation blog, news, and magazine theme for you to start sharing your stories today! This Bootstrap 5 based theme is ideal for all types of sites that deliver the news.</p>
