--- a/templates/blog/posts/recent_post.html
+++ b/templates/blog/posts/recent_post.html
@@ -2,7 +2,7 @@
     <div class="card mb-3">
         <div class="row g-3">
             <div class="col-4">
-                <img class="rounded" src="{{ post.image.url }}" alt="">
+                <img class="rounded" src="{{ post.thumbnail.url }}" alt="">
             </div>
             <div class="col-8">
                 <h6><a href="{{ post.get_absolute_url }}" class="btn-link stretched-link text-reset fw-bold">{{ post.title }}</a></h6>
