--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -144,7 +144,7 @@
 		<nav class="navbar navbar-expand-lg">
 			<div class="container">
 				<!-- Logo START -->
-				<a class="navbar-brand"  href="{% url 'blog:home' %}">
+				<a class="navbar-brand"  href="{% url 'home' %}">
 					<img class="navbar-brand-item light-mode-item" src="{% static  'images/logo.svg' %}" alt="logo">			
 					<img class="navbar-brand-item dark-mode-item" src="{% static  'images/logo-light.svg' %}" alt="logo">			
 				</a>
@@ -159,6 +159,9 @@
 				<!-- Main navbar START -->
 				<div class="collapse navbar-collapse" id="navbarCollapse">
 					<ul class="navbar-nav navbar-nav-scroll mx-auto">
+						<li class="nav-item">	
+							<a class="nav-link" href="{% url 'blog:post' %}">All</a>
+						</li>
 						{% for c in categories %}
 							<li {% if category.slug == c.slug %}class="nav-item" {% endif %}>	
 								<a class="nav-link" href="{{ c.get_absolute_url }}">{{ c.name|title }}</a>
@@ -172,8 +175,15 @@
 				<div class="nav flex-nowrap align-items-center">
 					<!-- Nav Button -->
 					<div class="nav-item d-none d-md-block">
-						<a href="{% url 'blog:home' %}" class="btn btn-sm btn-danger mb-0 mx-2">Subscribe!</a>
+						<a href="{% url 'home' %}" class="btn btn-sm btn-danger mb-0 mx-2">Subscribe!</a>
 					</div>
+					<!-- Nav user -->
+					<div class="nav-item">
+						<a class="nav-link" href="#">
+							<i class="bi bi-person-square fs-4"></i>
+						</a>
+					</div>
+					<!-- End Nav user -->
 					<!-- Nav Search -->
 					<div class="nav-item dropdown dropdown-toggle-icon-none nav-search">
 						<a class="nav-link dropdown-toggle" role="button" href="#" id="navSearch" data-bs-toggle="dropdown" aria-expanded="false">
@@ -186,6 +196,8 @@
 						</form>
 						</div>
 					</div>
+					<!-- End Nav Search -->
+
 					<!-- Offcanvas menu toggler -->
 					<div class="nav-item">
 						<a class="nav-link p-0" data-bs-toggle="offcanvas" href="#offcanvasMenu" role="button" aria-controls="offcanvasMenu">
