--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -50,7 +50,7 @@
                 {% for post in posts %}
                 {% if post.is_left_big_card %}
                 <div class="col-lg-6">
-                    <div class="card card-overlay-bottom card-grid-lg card-bg-scale" style="background-image:url({{ post.image.url }}); background-position: center left; background-size: cover;">
+                    <div class="card card-overlay-bottom card-grid-lg card-bg-scale" style="background-image:url({{ post.thumbnail.url }}); background-position: center left; background-size: cover;">
                         <!-- Card featured -->
                         <span class="card-featured" title="Featured post"><i class="fas fa-star"></i></span>
                         <!-- Card Image overlay -->
@@ -62,7 +62,7 @@
                                     <a href="{{ post.get_absolute_url }}" class="btn-link stretched-link text-reset">{{ post.title }}</a>
                                 </h2>
                             
-                                <p class="text-white" id='white'>{{ post.short_description|truncatewords_html:13 }}</p>
+                                <p class="text-white" id='white'>{{ post.overview|truncatewords_html:13 }}</p>
                                 
                             
                                 <!-- Card info -->
@@ -96,7 +96,7 @@
                     <div class="row g-4">
                         <!-- Card item START -->
                         <div class="col-12">
-                            <div class="card card-overlay-bottom card-grid-sm card-bg-scale" style="background-image:url({{ post.image.url }}); background-position: center left; background-size: cover;">
+                            <div class="card card-overlay-bottom card-grid-sm card-bg-scale" style="background-image:url({{ post.thumbnail.url }}); background-position: center left; background-size: cover;">
                                 <!-- Card Image -->
                                 <!-- Card Image overlay -->
                                 <div class="card-img-overlay d-flex align-items-center p-3 p-sm-4"> 
@@ -130,7 +130,7 @@
                         {% for post in posts %}
                         {% if post.is_right_left_small_cards %}
                         <div class="col-md-6">
-                            <div class="card card-overlay-bottom card-grid-sm card-bg-scale" style="background-image:url({{ post.image.url }}); background-position: center left; background-size: cover;">
+                            <div class="card card-overlay-bottom card-grid-sm card-bg-scale" style="background-image:url({{ post.thumbnail.url }}); background-position: center left; background-size: cover;">
                                 <!-- Card Image overlay -->
                                 <div class="card-img-overlay d-flex align-items-center p-3 p-sm-4"> 
                                     <div class="w-100 mt-auto">
@@ -158,7 +158,7 @@
                         {% for post in posts %}
                         {% if post.is_right_right_small_cards %}
                         <div class="col-md-6">
-                            <div class="card card-overlay-bottom card-grid-sm card-bg-scale" style="background-image:url({{ post.image.url }}); background-position: center left; background-size: cover;">
+                            <div class="card card-overlay-bottom card-grid-sm card-bg-scale" style="background-image:url({{ post.thumbnail.url }}); background-position: center left; background-size: cover;">
                                 <!-- Card Image overlay -->
                                 <div class="card-img-overlay d-flex align-items-center p-3 p-sm-4"> 
                                     <div class="w-100 mt-auto">
@@ -210,7 +210,7 @@
                             <div class="card">
                                 <!-- Card img -->
                                 <div class="position-relative">
-                                    <img class="card-img" src="{{ post.image.url }}" alt="Card image">
+                                    <img class="card-img" src="{{ post.thumbnail.url }}" alt="Card image">
                                     <div class="card-img-overlay d-flex align-items-start flex-column p-3">
                                         <!-- Card overlay bottom -->
                                         <div class="w-100 mt-auto">
@@ -221,7 +221,7 @@
                                 </div>
                                 <div class="card-body px-0 pt-3">
                                     <h4 class="card-title"><a href="{{ post.get_absolute_url }}" class="btn-link text-reset fw-bold">{{ post.title | capfirst  }}</a></h4>
-                                    <p class="card-text">{{ post.short_description }}...</p>
+                                    <p class="card-text">{{ post.overview }}...</p>
                                     <!-- Card info -->
                                     <ul class="nav nav-divider align-items-center d-none d-sm-inline-block">
                                         <li class="nav-item">
@@ -251,80 +251,7 @@
                     </div>
                 </div>
                 <!-- Main Post END -->
-                <!-- Sidebar START -->
-                <div class="col-lg-3 mt-5 mt-lg-0">
-                    <div data-sticky data-margin-top="80" data-sticky-for="767">
-    
-                        <!-- Social widget START -->
-                        <div class="row g-2">
-                            <div class="col-4">
-                                <a href="#" class="bg-facebook rounded text-center text-white-force p-3 d-block">
-                                    <i class="fab fa-facebook-square fs-5 mb-2"></i>
-                                    <h6 class="m-0">1.5K</h6>
-                                    <span class="small">Fans</span>
-                                </a>
-                            </div>
-                            <div class="col-4">
-                                <a href="#" class="bg-instagram-gradient rounded text-center text-white-force p-3 d-block">
-                                    <i class="fab fa-instagram fs-5 mb-2"></i>
-                                    <h6 class="m-0">1.8M</h6>
-                                    <span class="small">Followers</span>
-                                </a>
-                            </div>
-                            <div class="col-4">
-                                <a href="#" class="bg-youtube rounded text-center text-white-force p-3 d-block">
-                                    <i class="fab fa-youtube-square fs-5 mb-2"></i>
-                                    <h6 class="m-0">22K</h6>
-                                    <span class="small">Subs</span>
-                                </a>
-                            </div>
-                        </div>
-                        <!-- Social widget END -->
-    
-                        <!-- Trending topics widget START -->
-                        <div>
-                            <h4 class="mt-4 mb-3">Trending topics</h4>
-                            <!-- Category item -->
-                            {% for c in categories %}
-                            <div {% if category.slug == c.slug %} {% endif %}class="text-center mb-3 card-bg-scale position-relative overflow-hidden rounded bg-dark-overlay-4 " style="background-image:url({{ c.image.url }}); background-position: center left; background-size: cover;">
-                                <div class="p-3">
-                                    <a href="{{ c.get_absolute_url }}" class="stretched-link btn-link fw-bold text-white h5">{{ c.name|title }}</a>
-                                </div>
-                            </div>
-                            {% endfor %}
-                            <!-- End Category item -->
-
-                            
-                            <!-- View All Category button -->
-                            <div class="text-center mt-3">
-                                <a href="#" class="fw-bold text-body text-primary-hover"><u>View all categories</u></a>
-                            </div>
-                        </div>
-                        <!-- Trending topics widget END -->
-    
-                        <div class="row">
-                            <!-- Recent post widget START -->
-                            <div class="col-12 col-sm-6 col-lg-12">
-                                <h4 class="mt-4 mb-3">Recent post</h4>
-                                <!-- Recent post item -->
-                                {% show_recent_posts %}
-                                <!-- End Recent post item -->
-                                
-                            </div>
-                            <!-- Recent post widget END -->
-    
-                            <!-- ADV widget START -->
-                            <div class="col-12 col-sm-6 col-lg-12 my-4">
-                                <a href="#" class="d-block card-img-flash">
-                                    <img src="{% static 'images/adv.png' %}" alt="">
-                                </a>
-                                <div class="smaller text-end mt-2">ads via <a href="#" class="text-body"><u>Bootstrap</u></a></div>
-                            </div>
-                            <!-- ADV widget END -->
-                        </div>
-                    </div>
-                </div>
-                <!-- Sidebar END -->
+                {% include 'blog/sidebar.html' %}
             </div> <!-- Row end -->
         </div>
     </section>
