--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -63,9 +63,9 @@
 				<!-- Nav START -->
 				<ul class="nav d-block flex-column my-4">
 					<li class="nav-item">
-						<a href="index.html" class="nav-link h5">Home</a>
+						<a href="{% url 'home' %}" class="nav-link h5">Home</a>
 					<li class="nav-item">
-						<a class="nav-link h5" href="about-us.html">About</a>
+						<a class="nav-link h5" href="{% url 'core:about' %}">About</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link h5" href="post-grid.html">Our Journal</a>
@@ -102,7 +102,7 @@
 					<!-- Top bar left -->
 					<ul class="nav">
 						<li class="nav-item">
-							<a class="nav-link ps-0" href="about-us.html">About</a>
+							<a class="nav-link ps-0" href="{% url 'core:about' %}">About</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Forum</a>
@@ -110,9 +110,15 @@
 						<li class="nav-item">
 							<a class="nav-link" href="https://themes.getbootstrap.com/store/webestica/">Buy now!</a>
 						</li>
+						{% if user.id is not None %}
 						<li class="nav-item">
-							<a class="nav-link" href="signin.html">Login / Join</a>
+							<a class="nav-link" href="{% url 'core:login' %}">Login / Join</a>
 						</li>
+						{% else %}
+						<li class="nav-item">
+							<a class="nav-link" href="{% url 'core:signup' %}">Login / Join</a>
+						</li>
+						{% endif %}
 					</ul>
 					<!-- Top bar right -->
 					<div class="d-flex align-items-center">
