--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -157,9 +157,11 @@ $transition-base:               all .3s ease-in-out;
 //
 // Font Families
 
-$font-family-base:           'Rubik', sans-serif;
-$font-family-heading:        'Nunito Sans', sans-serif;
+// $font-family-base:           'Rubik', sans-serif;
+// $font-family-heading:        'Nunito Sans', sans-serif;
 
+$font-family:                'Lato', sans-serif;
+$font-family-heading:        'Lato', sans-serif;
 // Font Sizes
 
 $font-size-xs:                .8125rem;
