--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -163,7 +163,7 @@
                                 <div class="card-img-overlay d-flex align-items-center p-3 p-sm-4"> 
                                     <div class="w-100 mt-auto">
                                         <!-- Card category -->
-                                        <a href="#" class="badge bg-info mb-2"><i class="fas fa-circle me-2 small fw-bold"></i>{{ post.category_name }}</a>
+                                        <a href="{{ course.get_absolute_url }}" class="badge bg-info mb-2"><i class="fas fa-circle me-2 small fw-bold"></i>{{ post.category_name }}</a>
                                         <!-- Card title -->
                                     <h4 class="text-white"><a href="{{ post.get_absolute_url }}" class="btn-link stretched-link text-reset">{{ post.title }}</a></h4>
                                     <!-- Card info -->
