--- a/templates/blog/posts/detail.html
+++ b/templates/blog/posts/detail.html
@@ -11,14 +11,34 @@
     
     <!-- =======================
     Inner intro START -->
-    <section class="pb-3 pb-lg-5">
+    <section class="pb-3 pb-lg-2 pt-0">
         <div class="container">
             <div class="row">
-                <div class="col-12">
-            <a href="#" class="badge bg-danger mb-2"><i class="fas fa-circle me-2 small fw-bold"></i>Lifestyle</a>
+                <div class="pt-md-2">
+                    <a href="#" class="badge bg-danger mb-2">
+                        <i class="fas fa-circle me-2 small fw-bold"></i>Lifestyle
+                    </a>
                     <h1>{{ post.title }}</h1>
                 </div>
-                 <p class="lead">{{ post.overview }}...</p>
+                <p class="lead">{{ post.overview }}...</p>
+                <!-- Info -->
+                <div>
+                <ul class="nav nav-divider align-items-center">
+                    <li class="nav-item">
+                        <div class="nav-link">
+                        <div class="d-flex align-items-center position-relative">
+                            <div class="avatar avatar-xs">
+                            <img class="avatar-img rounded-circle" src="{% static 'images/avatar/03.jpg' %}" alt="avatar">
+                            </div>
+                            <span class="ms-3">by <a href="#" class="stretched-link text-reset btn-link">{{ post.author}}</a></span>
+                        </div>
+                        </div>
+                    </li>
+                    <li class="nav-item">{{ post.created|timesince }}</li>
+                    <li class="nav-item"><a href="{{ object.get_like_url }}" class="text-body"><i class="far fa-heart me-1"></i></a> {{ post.get_like_count }}</li>
+                    <li class="nav-item">{{ post.get_view_count }} Views</li>
+                </ul>
+            </div>
             </div>
         </div>
     </section>
@@ -30,53 +50,6 @@
     <section class="pt-0">
         <div class="container position-relative" data-sticky-container>
             <div class="row">
-                <!-- Left sidebar START -->
-                <div class="col-lg-2">
-                    <div class="text-start text-lg-center mb-5" data-sticky data-margin-top="80" data-sticky-for="991">
-
-                        <!-- Author info -->
-                        <div class="position-relative">
-                            <div class="avatar avatar-xl">
-                                <img class="avatar-img rounded-circle" src="{% static 'images/avatar/03.jpg' %}" alt="avatar">
-                            </div>
-                            <a href="#" class="h5 stretched-link mt-2 mb-0 d-block">{{ post.author }}</a>
-                            <p>{{ post.about_author}}</p>
-                        </div>
-                        <hr class="d-none d-lg-block">
-                        
-                        <!-- Card info -->
-                        <ul class="list-inline list-unstyled">
-                            <li class="list-inline-item d-lg-block my-lg-2">{{ post.created }}</li>
-                            <li class="list-inline-item d-lg-block my-lg-2">5 min read</li>
-                            
-                            <li class="list-inline-item d-lg-block my-lg-2"><a href="{{ object.get_like_url }}" class="text-body"><i class="far fa-heart me-1"></i></a> {{ post.get_like_count }}
-                            </li>
-                            <li class="list-inline-item d-lg-block my-lg-2"><i class="far fa-eye me-1"></i> {{ post.get_view_count }} Views</li>
-                        </ul>
-                        <!-- Tags -->
-                        <ul class="list-inline text-primary-hover mt-0 mt-lg-3">
-                          <li class="list-inline-item">
-                              <a class="text-body" href="#">#agency</a>
-                          </li>
-                          <li class="list-inline-item">
-                              <a class="text-body" href="#">#business</a>
-                          </li>
-                          <li class="list-inline-item">
-                              <a class="text-body" href="#">#theme</a>
-                          </li>
-                          <li class="list-inline-item">
-                              <a class="text-body" href="#">#bootstrap</a>
-                          </li>
-                          <li class="list-inline-item">
-                              <a class="text-body" href="#">#marketing</a>
-                          </li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- Left sidebar END -->
-                <!-- Main Content START -->
-                <div class="col-lg-7 mb-5">
-              
                     <!-- Image -->
                     <figure class="figure mt-2">
                       <a href="{% static 'images/blog/3by2/04.jpg' %}" data-glightbox data-gallery="image-popup">
@@ -85,15 +58,8 @@
                       <figcaption class="figure-caption text-center">(Image via: <a class="text-reset" href="#">pexels.com</a>)</figcaption>
                     </figure>
 
-                    <p><span class="dropcap">I</span>{{ post.description|safe }}</</p>
+                    <p>{{ post.description|safe }}</p>
                     
-    
-                  
-    
-
-                    
-                    
-    
                     <div class="row g-0">
                         {% if post.previous_post %}
                         <div class="col-sm-6 bg-primary-soft p-4 position-relative border-end border-1 rounded-start">
@@ -247,13 +213,55 @@
                     </div>
                     {% endif %}
                     <!-- Reply END --> 
-                </div>
+                    <div class="col-lg-2">
+                        <div class="text-start text-lg-center mb-5" data-sticky data-margin-top="80" data-sticky-for="991">
+    
+                            <!-- Author info -->
+                            <div class="position-relative">
+                                <div class="avatar avatar-xl">
+                                    <img class="avatar-img rounded-circle" src="{% static 'images/avatar/03.jpg' %}" alt="avatar">
+                                </div>
+                                <a href="#" class="h5 stretched-link mt-2 mb-0 d-block">{{ post.author }}</a>
+                                <p>{{ post.about_author}}</p>
+                            </div>
+                            <hr class="d-none d-lg-block">
+                            
+                            <!-- Card info -->
+                            <ul class="list-inline list-unstyled">
+                                <li class="list-inline-item d-lg-block my-lg-2">{{ post.created }}</li>
+                                <li class="list-inline-item d-lg-block my-lg-2">5 min read</li>
+                                
+                                <li class="list-inline-item d-lg-block my-lg-2"><a href="{{ object.get_like_url }}" class="text-body"><i class="far fa-heart me-1"></i></a> {{ post.get_like_count }}
+                                </li>
+                                <li class="list-inline-item d-lg-block my-lg-2"><i class="far fa-eye me-1"></i> {{ post.get_view_count }} Views</li>
+                            </ul>
+                            <!-- Tags -->
+                            <ul class="list-inline text-primary-hover mt-0 mt-lg-3">
+                              <li class="list-inline-item">
+                                  <a class="text-body" href="#">#agency</a>
+                              </li>
+                              <li class="list-inline-item">
+                                  <a class="text-body" href="#">#business</a>
+                              </li>
+                              <li class="list-inline-item">
+                                  <a class="text-body" href="#">#theme</a>
+                              </li>
+                              <li class="list-inline-item">
+                                  <a class="text-body" href="#">#bootstrap</a>
+                              </li>
+                              <li class="list-inline-item">
+                                  <a class="text-body" href="#">#marketing</a>
+                              </li>
+                            </ul>
+                        </div>
+                    </div>
+                
                 <!-- Main Content END -->
                 
                 <!-- Right sidebar START -->
-                <div class="col-lg-3">
+                {% comment %} <div class="col-lg-2">
                     <div data-sticky data-margin-top="80" data-sticky-for="991">
-                  <h4>Share this article</h4>
+                        <h4>Share this article</h4>
                         <ul class="nav text-white-force">
                             <li class="nav-item">
                                 <a class="nav-link icon-md rounded-circle me-2 mb-2 p-0 fs-5 bg-facebook" href="#">
@@ -288,7 +296,7 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div>  {% endcomment %}
                 <!-- Right sidebar END -->
             </div>
         </div>
