--- a/templates/content/video.html
+++ b/templates/content/video.html
@@ -12,8 +12,7 @@
                 <div class="col-md-12">
                     <!-- Title -->
                     <div class="mb-4 d-md-flex justify-content-between align-items-center">
-                        <h2 class="m-0"><i class="bi bi-megaphone"></i> All videos</h2>
-                        <a href="#" class="text-body small"><u>Content by: Bootstrap</u></a>
+                        <h2 class="m-0">All videos</h2>
                     </div>
                     <div class="tiny-slider arrow-hover arrow-blur arrow-dark arrow-round">
                         <div class="tiny-slider-inner"
@@ -33,39 +32,26 @@
                                 <!-- Card img -->
                                 <div class="position-relative">
                                     <img class="card-img" src="{{ video.image.url }}" alt="Card image">
-                                    <div class="card-img-overlay d-flex align-items-start flex-column p-3">
-                                        <!-- Card overlay Top -->
-                                        <div class="w-100 mb-auto d-flex justify-content-end">
-                                            <div class="text-end ms-auto">
-                                                <!-- Card format icon -->
-                                                <div class="icon-md bg-white-soft bg-blur text-white fw-bold rounded-circle" title="8.5 rating">8.5</div>
-                                            </div>
-                                        </div>
-                                        <!-- Card overlay bottom -->
-                                        <div class="w-100 mt-auto">
-                                            <a href="#" class="badge bg-info mb-2"><i class="fas fa-circle me-2 small fw-bold"></i>Marketing</a>
-                                        </div>
+                                     <!-- Card Image overlay -->
+                                <div class="card-img-overlay d-flex flex-column p-3 p-sm-5">
+                                    <!-- Card play button -->
+                                    <div class="position-absolute top-50 start-50 mt-5 translate-middle pb-5">
+                                        <!-- Popup video -->
+                                        <a href="https://youtu.be/n_Cn8eFo7u8" class="icon-lg bg-primary d-block text-white rounded-circle" data-glightbox data-gallery="y-video">
+                                            <i class="bi bi-play-btn"></i>
+                                        </a>
                                     </div>
+                                    
+                                </div>
                                 </div>
                                 <div class="card-body px-0 pt-3">
-                                    <h5 class="card-title"><a href="post-single-3.html" class="btn-link text-reset fw-bold">{{ video.title }}</a></h5>
-                                    <!-- Card info -->
-                                    <ul class="nav nav-divider align-items-center d-none d-sm-inline-block">
-                                        <li class="nav-item">
-                                            <div class="nav-link">
-                                                <div class="d-flex align-items-center position-relative">
-                                                    <div class="avatar avatar-xs">
-                                                        <img class="avatar-img rounded-circle" src="{% static 'images/avatar/07.jpg' %}" alt="avatar">
-                                                    </div>
-                                                    <span class="ms-3">by <a href="#" class="stretched-link text-reset btn-link">Lori</a></span>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li class="nav-item">Mar 07, 2021</li>
-                                    </ul>
+                                    <h5 class="card-title"><a href="{{ video.get_absolute_url }}" class="btn-link text-reset fw-bold">{{ video.title }}</a></h5>
                                 </div>
                             </div>
+                            
                             {% endfor %}
+
+                            
                             <!-- Card item END -->
                         </div>
                     </div>
