--- a/templates/blog/posts/detail.html
+++ b/templates/blog/posts/detail.html
@@ -213,7 +213,7 @@
                     </div>
                     {% endif %}
                     <!-- Reply END --> 
-                    <div class="col-lg-2">
+                    {% comment %} <div class="col-lg-2">
                         <div class="text-start text-lg-center mb-5" data-sticky data-margin-top="80" data-sticky-for="991">
     
                             <!-- Author info -->
@@ -254,7 +254,7 @@
                               </li>
                             </ul>
                         </div>
-                    </div>
+                    </div> {% endcomment %}
                 
                 <!-- Main Content END -->
                 
