--- a/templates/blog/posts/category.html
+++ b/templates/blog/posts/category.html
@@ -9,11 +9,11 @@
 <main>
     <!-- =======================
     Inner intro START -->
-    <section class="pt-4">
+    <section class="pt-0">
         <div class="container">
             <div class="row">
         <div class="col-12">
-            {% for c in post.categories.all %}
+            {% for post in posts %}
             <div {% if category.slug == c.slug %} {% endif %} class="card bg-dark-overlay-4 overflow-hidden card-bg-scale h-300 text-center" style="background-image:url({{ category.image.url }}) ; background-position: center left; background-size: cover;">
             post.
             <!-- Card Image overlay -->
@@ -61,7 +61,7 @@
                                 </div>
                                 <div class="card-body px-0 pt-3">
                                     <h4 class="card-title"><a href="{{ post.get_absolute_url }}" class="btn-link text-reset fw-bold">{{ post.title | capfirst  }}</a></h4>
-                                    <p class="card-text">{{ post.overview }}...</p>
+                                    <p class="card-text">{{ post.overview|slice:":122" }}...</p>
                                     <!-- Card info -->
                                     <ul class="nav nav-divider align-items-center d-none d-sm-inline-block">
                                         <li class="nav-item">
