--- a/templates/content/detail.html
+++ b/templates/content/detail.html
@@ -5,7 +5,6 @@
 
 {% block content %}
     
-    
     <!-- =======================
 Main hero START -->
 <section class="pt-4 pb-0 card-grid">
@@ -48,9 +47,9 @@ Main hero START -->
 
                             <!-- Card info -->
                             <ul class="list-inline">
-                                <li class="list-inline-item"><i class="far fa-eye me-1"></i>2344</li>
-                                <li class="list-inline-item"><i class="far fa-heart me-1"></i> 266</li>
-                                <li class="list-inline-item"><i class="far fa-comment me-1"></i>14</li>
+                                <li class="list-inline-item"><i class="far fa-eye me-1"></i>{{ video.get_view_count }}</li>
+                                <li class="list-inline-item"><a href="{{ video.get_like_url }}" class="text-body"><i class="far fa-heart me-1"></i></a>  {{ video.get_like_count }}</li>
+                                <li class="list-inline-item"><i class="far fa-comment me-1"></i>{{ video.comment_count }}</li>
                                 <li class="list-inline-item"><i class="fas fa-share"></i></li>
                             </ul>
                             <!-- End Card info --> 
@@ -58,7 +57,7 @@ Main hero START -->
                         <div class="col-md-5">
                             <!-- Comments START -->
                             <div>
-                                <h3>{{ video.comments.count}} comments</h3>
+                                <h3>{{ video.comment_count}} comments</h3>
                                 <!-- Comment level 1-->
                                 {% for comment in video.comment_set.all %}
                                 {% if comment.approved %}
@@ -86,24 +85,6 @@ Main hero START -->
                                 <form class="review-form" 
                                     action="/content/addcomment/{{ video.id }}" method="post">
                                     {% csrf_token %}
-                                    {% comment %} <div class="row">
-                                        <div class="col-md-12">
-                                        <label class="sr-only" for="reviewText">Review:</label>
-                                        <textarea class="form-control form-control-sm" name="comment" rows="5" placeholder="Your review " required></textarea>
-                                        </div>
-                                    </div><br>
-                                    <div class="row">
-                                        <div class="d-flex justify-content-between">
-                                            {% if user.id is not None %}
-                                            <button class="btn btn-primary btn-sm btn-block" type="submit">
-                                            Post Review
-                                            </button>
-                                            {% else %}
-                                            You must be logged in to post a review
-                                            {% endif %}
-                                        </div>
-                                    </div> {% endcomment %}
-                                    
                                     <div class="mb-3">
                                         <label for="exampleFormControlTextarea1" class="form-label">Leave a reply</label>
                                         <textarea class="form-control" name='content' id="exampleFormControlTextarea1" rows="3" placeholder="Your comment"></textarea>
