--- a/templates/blog/posts/recent_post.html
+++ b/templates/blog/posts/recent_post.html
@@ -5,7 +5,7 @@
                 <img class="rounded" src="{{ post.thumbnail.url }}" alt="">
             </div>
             <div class="col-8">
-                <h6><a href="{{ post.get_absolute_url }}" class="btn-link stretched-link text-reset fw-bold">{{ post.title }}</a></h6>
+                <h6><a href="{{ post.get_absolute_url }}" class="btn-link stretched-link text-reset fw-normal h6">{{ post.title }}</a></h6>
                 <div class="small mt-1">{{ post.created|timesince }} ago</div>
             </div>
         </div>
