--- a/templates/content/list.html
+++ b/templates/content/list.html
@@ -45,7 +45,7 @@ Main hero START -->
                                     <div class="card-img-overlay d-flex align-items-center p-3 p-sm-4"> 
                                         <div class="w-100 mt-auto">
                                             <!-- Card title -->
-                                        <h4 class="text-white"><a href="{{ course.get_absolute_url }}" class="btn-link stretched-link text-reset">{{ course.name }}</a></h4>
+                                        <h4 class="text-white h5"><a href="{{ course.get_absolute_url }}" class="btn-link stretched-link text-reset">{{ course.name }}</a></h4>
                                         <!-- Card info -->
                                         </div>
                                     </div>
