--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -59,7 +59,7 @@
                                 <!-- Card category -->
                                 <a href="#" class="badge bg-warning mb-2"><i class="fas fa-circle me-2 small fw-bold"></i>{{ post.category_name }}</a>
                                 <h2 class="text-white h1">
-                                    <a href="{{ post.get_absolute_url }}" class="btn-link stretched-link text-reset">{{ post.title }}</a>
+                                    <a href="{{ post.get_absolute_url }}" class="btn-link stretched-link text-reset h5">{{ post.title }}</a>
                                 </h2>
                             
                                 <p class="text-white" id='white'>{{ post.overview|truncatewords_html:13 }}</p>
@@ -70,7 +70,7 @@
                                         <li class="nav-item">
                                             <div class="nav-link">
                                                 <div class="d-flex align-items-center text-white position-relative">
-                                                <div class="avatar avatar-sm">
+                                                <div class="avatar avatar-xs">
                                                             <img class="avatar-img rounded-circle" src="{% static 'images/avatar/11.jpg' %}" alt="avatar">
                                                         </div>
                                                         <span class="ms-3">by <a href="#" class="stretched-link text-reset btn-link">{{ post.author }}</a></span>
@@ -78,7 +78,6 @@
                                                 </div>
                                         </li>
                                         <li class="nav-item">{{ post.created|timesince }} ago</li>
-                                        <li class="nav-item">5 min read</li>
                                     </ul>
                             </div>
                         </div>
@@ -104,7 +103,7 @@
                                         <!-- Card category -->
                                         <a href="#" class="badge bg-warning mb-2"><i class="fas fa-circle me-2 small fw-bold"></i>{{ post.category_name }}</a>
                                         <!-- Card title -->
-                                        <h4 class="text-white">
+                                        <h4 class="text-white h5">
                                             <a href="{{ post.get_absolute_url }}" class="btn-link stretched-link text-reset">{{ post.title }}</a>
                                         </h4>
                                         <!-- Card info -->
@@ -137,7 +136,7 @@
                                         <!-- Card category -->
                                         <a href="#" class="badge bg-success mb-2"><i class="fas fa-circle me-2 small fw-bold"></i>{{ post.category_name }}</a>
                                         <!-- Card title -->
-                                    <h4 class="text-white"><a href="{{ post.get_absolute_url }}" class="btn-link stretched-link text-reset">{{ post.title }}</a></h4>
+                                    <h4 class="text-white h5"><a href="{{ post.get_absolute_url }}" class="btn-link stretched-link text-reset">{{ post.title }}</a></h4>
                                     <!-- Card info -->
                                         <ul class="nav nav-divider text-white-force align-items-center d-none d-sm-inline-block">
                                             <li class="nav-item position-relative">
@@ -165,7 +164,7 @@
                                         <!-- Card category -->
                                         <a href="{{ course.get_absolute_url }}" class="badge bg-info mb-2"><i class="fas fa-circle me-2 small fw-bold"></i>{{ post.category_name }}</a>
                                         <!-- Card title -->
-                                    <h4 class="text-white"><a href="{{ post.get_absolute_url }}" class="btn-link stretched-link text-reset">{{ post.title }}</a></h4>
+                                    <h4 class="text-white h5"><a href="{{ post.get_absolute_url }}" class="btn-link stretched-link text-reset">{{ post.title }}</a></h4>
                                     <!-- Card info -->
                                         <ul class="nav nav-divider text-white-force align-items-center d-none d-sm-inline-block">
                                             <li class="nav-item position-relative">
@@ -200,8 +199,7 @@
                 <div class="col-lg-9">
                     <!-- Title -->
                     <div class="mb-4">
-                        <h2 class="m-0"><i class="bi bi-hourglass-top me-2"></i>Today's top highlights</h2>
-                        <p>Latest breaking news, pictures, videos, and special reports</p>
+                        <h2 class="m-0 h4">Today's top highlights</h2>
                     </div>
                     <div class="row gy-4">
                         <!-- Card item START -->
@@ -220,8 +218,8 @@
                                     </div>
                                 </div>
                                 <div class="card-body px-0 pt-3">
-                                    <h4 class="card-title"><a href="{{ post.get_absolute_url }}" class="btn-link text-reset fw-bold">{{ post.title | capfirst  }}</a></h4>
-                                    <p class="card-text">{{ post.overview }}...</p>
+                                    <h4 class="card-title h5"><a href="{{ post.get_absolute_url }}" class="btn-link text-reset fw-bold">{{ post.title | capfirst  }}</a></h4>
+                                    <p class="card-text">{{ post.overview|slice:":122" }}...</p>
                                     <!-- Card info -->
                                     <ul class="nav nav-divider align-items-center d-none d-sm-inline-block">
                                         <li class="nav-item">
@@ -243,11 +241,6 @@
 
                         <!-- Card item END -->
                         
-                        <!-- Load more START -->
-                        <div class="col-12 text-center mt-5">
-                            <button type="button" class="btn btn-primary-soft">Load more post <i class="bi bi-arrow-down-circle ms-2 align-middle"></i></button>
-                        </div>
-                        <!-- Load more END -->
                     </div>
                 </div>
                 <!-- Main Post END -->
@@ -269,7 +262,6 @@
                 <div class="col-md-12">
                     <!-- Title -->
                     <div class="mb-4 d-md-flex justify-content-between align-items-center">
-                        <h2 class="m-0"><i class="bi bi-megaphone"></i> Sponsored news</h2>
                         <a href="#" class="text-body small"><u>Content by: Bootstrap</u></a>
                     </div>
                     <div class="tiny-slider arrow-hover arrow-blur arrow-dark arrow-round">
