--- a/templates/blog/posts/blog.html
+++ b/templates/blog/posts/blog.html
@@ -25,8 +25,8 @@
                                
                                 <a href="#" class="badge bg-danger mb-2"><i class="fas fa-circle me-2 small fw-bold"></i>{{ post.category_name }}</a>
                                
-                                <h3><a href="{{ post.get_absolute_url }}" class="btn-link stretched-link text-reset">{{ post.title }}</a></h3>
-                                <p>{{ post.overview }}</p>
+                                <h3 class='h5'><a href="{{ post.get_absolute_url }}" class="btn-link stretched-link text-reset">{{ post.title }}</a></h3>
+                                <p>{{ post.overview|slice:":122" }}..</p>
                                 <!-- Card info -->
                                 <ul class="nav nav-divider align-items-center d-none d-sm-inline-block">
                                     <li class="nav-item">
