--- a/templates/blog/posts/category.html
+++ b/templates/blog/posts/category.html
@@ -20,13 +20,10 @@
             <div class="card-img-overlay d-flex align-items-center p-3 p-sm-4"> 
                 <div class="w-100 my-auto">
                                 <div class="text-white mb-3">Browsing category:</div>
-                <h1 class="text-white h2">
+                <h1 class="text-white h4">
                                     <span class="badge bg-warning mb-2">
                                         <i class="fas fa-circle me-2 small fw-bold"></i>{{ category.name|title }}</span>
                                 </h1>
-                <div class="text-center position-relative">
-                                    <span class="badge bg-info fs-6">14 posts</span>
-                                </div>
                 </div>
             </div>
             </div>
@@ -60,7 +57,7 @@
                                     </div>
                                 </div>
                                 <div class="card-body px-0 pt-3">
-                                    <h4 class="card-title"><a href="{{ post.get_absolute_url }}" class="btn-link text-reset fw-bold">{{ post.title | capfirst  }}</a></h4>
+                                    <h4 class="card-title h5"><a href="{{ post.get_absolute_url }}" class="btn-link text-reset fw-bold">{{ post.title | capfirst  }}</a></h4>
                                     <p class="card-text">{{ post.overview|slice:":122" }}...</p>
                                     <!-- Card info -->
                                     <ul class="nav nav-divider align-items-center d-none d-sm-inline-block">
