--- a/templates/content/detail.html
+++ b/templates/content/detail.html
@@ -42,7 +42,7 @@ Main hero START -->
 				<div class="card bg-transparent mb-4">
                     <div class="row">
                         <div class="col-md-7 mt-3 mt-md-0">
-                            <h3>{{ video.title }}</h3>
+                            <h1 class='h5'>{{ video.title }}</h1>
                             <p>{{ video.description }}</p>
 
                             <!-- Card info -->
@@ -57,7 +57,7 @@ Main hero START -->
                         <div class="col-md-5">
                             <!-- Comments START -->
                             <div>
-                                <h3>{{ video.comment_count}} comments</h3>
+                                <h5>{{ video.comment_count}} comments</h5>
                                 <!-- Comment level 1-->
                                 {% for comment in video.comment_set.all %}
                                 {% if comment.approved %}
@@ -126,7 +126,7 @@ Section START -->
 			<div class="col-md-12">
 				<!-- Title -->
 				<div class="mb-4 d-md-flex justify-content-between align-items-center">
-					<h2 class="m-0">Et plus encore</h2>
+					<h4 class="m-0">Et plus encore</h5>
 				</div>
 				<div class="tiny-slider arrow-hover arrow-blur arrow-dark arrow-round">
 					<div class="tiny-slider-inner"
