--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -11,7 +11,7 @@
 		<div class="row">
       <div class="col-md-10 col-lg-8 col-xl-6 mx-auto">
         <div class="p-4 p-sm-5 bg-primary-soft rounded">
-					<h2>Log in to your account</h2>
+					<h2 class="text-center">Log in to your account</h2>
 					<!-- Form START -->
           <div class="text-sm text-center">
             <span>Don't have an account? <a href="{{ signup_url }}"><u>Sign up</u></a></span>
