--- a/templates/content/video.html
+++ b/templates/content/video.html
@@ -62,7 +62,7 @@
 								</div>
 							</div>
 							<div class="card-body px-0 pt-3">
-								<h5 class="card-title"><a href="post-single-3.html" class="btn-link text-reset fw-bold">{{video.title}}</a></h5>
+								<h5 class="card-title"><a href="{{ video.get_absolute_url }}" class="btn-link text-reset fw-bold">{{video.title}}</a></h5>
                         <div class="d-flex justify-content-between">
                            <p class="">
                               <i class="bi bi-eye"></i>  633.8k
